# Demo

./: .gitignore
CPP/: CMakeLists.txt
CPP/cpp_grammar_demo/: lambda.cpp  pointer.cpp  polymorphic.cpp
CPP/nlohmann_json_demo/: CMakeLists.txt  main.cpp  rcs.json
CPP/pybind/: example.cpp  example.h
CPP/src/: func_pointer.cpp  size_of.cpp  variadic_templates.cpp
Conan/: CMakeLists.txt  conanfile.txt
Conan/src/: main.cpp
Python/socket_demo/: client.py  server.py
